package GUI;

import javafx.event.ActionEvent;
import javafx.scene.input.MouseEvent;

public class ControllerWindowProduct {
    public void buttonAddProduct(ActionEvent actionEvent) {
    }

    public void showAllProduct(MouseEvent mouseEvent) {
    }

    public void deleteSelectedProduct(MouseEvent mouseEvent) {
    }
}
