@startuml

title __SERVICE's Class Diagram__\n

  namespace GUI {
    class GUI.Controller {
    }
  }
  

  namespace GUI {
    class GUI.ControllerWindowClient {
    }
  }
  

  namespace GUI {
    class GUI.ControllerWindowEmployer {
    }
  }
  

  namespace GUI {
    class GUI.ControllerWindowPosition {
    }
  }
  

  namespace GUI {
    class GUI.ControllerWindowProduct {
    }
  }
  

  namespace GUI {
    class GUI.ControllerWindowRegion {
    }
  }
  

  namespace GUI {
    class GUI.Main {
    }
  }
  

  namespace Models {
    class Models.Client {
    }
  }
  

  namespace Models {
    class Models.Employer {
    }
  }
  

  namespace Models {
    class Models.Incident {
    }
  }
  

  namespace Models {
    class Models.Position {
    }
  }
  

  namespace Models {
    class Models.Product {
    }
  }
  

  namespace Models {
    class Models.Region {
    }
  }
  

  namespace dao {
    interface dao.ClientDAO {
    }
  }
  

  namespace dao {
    interface dao.EmployerDAO {
    }
  }
  

  namespace dao {
    class dao.EmployerDAOImpl {
    }
  }
  

  namespace dao {
    interface dao.IncidentDAO {
    }
  }
  

  namespace dao {
    class dao.IncidentDAOImpl {
    }
  }
  

  namespace dao {
    class dao.clientDAOImpl {
    }
  }
  

  namespace service {
    class service.ClientService {
    }
  }
  

  namespace service {
    class service.EmployerService {
    }
  }
  

  namespace service {
    class service.IncidentService {
    }
  }
  

  namespace utils {
    class utils.HibernateSessionFactoryUtil {
    }
  }
  

  GUI.Main -up-|> javafx.application.Application
  Models.Client o-- Models.Region : region
  Models.Employer o-- Models.Position : position
  Models.Incident o-- Models.Client : client
  Models.Incident o-- Models.Product : product
  Models.Position -up-|> dao.EmployerDAOImpl
  Models.Region -up-|> dao.EmployerDAOImpl
  dao.EmployerDAOImpl .up.|> dao.EmployerDAO
  dao.IncidentDAOImpl .up.|> dao.IncidentDAO
  dao.clientDAOImpl .up.|> dao.ClientDAO
  service.ClientService o-- dao.clientDAOImpl : model
  service.EmployerService o-- dao.EmployerDAOImpl : model
  service.IncidentService o-- dao.IncidentDAOImpl : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
